<video> rendered inside <template> shows black for webcam stream (Safari 14.0.3 only) https://bugs.webkit.org/show_bug.cgi?id=222115 <rdar://problem/74546659>

Reviewed by Eric Carlson.

Source/WebCore:

Update element visibility if changing of document. Add internals API to test this.

Test: fast/media/template-hidden.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::didMoveToNewDocument):
* testing/Internals.cpp:
(WebCore::Internals::isMediaElementHidden):
* testing/Internals.h:
* testing/Internals.idl:

LayoutTests:

* fast/media/template-hidden-expected.txt: Added.
* fast/media/template-hidden.html: Added.


Canonical link: https://commits.webkit.org/237944@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277783 268f45cc-cd09-0410-ab3c-d52691b4dbfc